...
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name of category" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Y7e-0S-AUT">
                                                <rect key="frame" x="61" y="0.0" width="141.5" height="34"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        </subviews>
                                    </stackView>
                                    <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera.fill.badge.ellipsis" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="b2E-qe-Ttk">
                                        <rect key="frame" x="0.0" y="43" width="252" height="249.5"/>
                                        <color key="backgroundColor" systemColor="systemGray5Color"/>
...
                                        <color key="tintColor" systemColor="systemOrangeColor"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Done"/>
                                        <connections>
                                            <action selector="done:" destination="Hv3-8m-gxA" eventType="touchUpInside" id="TVf-1f-Ysu"/>
...
                                                                <nil key="highlightedColor"/>
                                                            </label>
                                                            <textField opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="short description" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cJf-GR-9QF">
                                                                <rect key="frame" x="88.5" y="0.0" width="161.5" height="34"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                                <nil key="highlightedColor"/>
                                                            </label>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="category of product" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Oai-Co-asl">
                                                                <rect key="frame" x="88.5" y="0.0" width="161.5" height="34"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="eX2-za-ktv" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Categories" image="tray.full" catalog="system" selectedImage="tray.full" id="z5c-Iw-4Qa" colorLabel="IBBuiltInLabel-Purple">
                        <color key="badgeColor" systemColor="systemOrangeColor"/>
                    </tabBarItem>
...
