...
    
    @IBAction func deleteAction(_ sender: UIBarButtonItem) {
        //ask one more time
        let alert = UIAlertController(title: "warning", message: "Are you sure to delete this product?", preferredStyle: .alert)

        alert.addAction(UIAlertAction(title: "Ок", style: .default, handler: deleteProduct(_:)))
        alert.addAction(UIAlertAction(title: "Cancel", style: .cancel))
       
        self.present(alert, animated: true)

    }
    
    @objc func deleteProduct(_ alert : UIAlertAction) {
...
